@@ -6,10 +6,8 @@ DEADLINES
 DESIGN
 - what should happen when solute is changed?
 - is a stubby dropper OK? because that's the only way we're going to fit a label and button
-- if dropper is transparent and shows solution color, labels won't show up on some solutions
+- what do you want to see inside the dropper? how does this interact with solute label?
 - move beaker ticks to left side, ala sugar-and-salt-solutions?
-- tilt dropper, ala shaker?
-- disable evaporation slider when beaker is empty?
 - is there a maximum amount of solute? (will affect usability of dropper and beaker)
 - is there a maximum amount of solution that the dropper can dispense?
 - is there a maximum amount of solute that the shaker can dispense?
